- typos, encoding fixes, added vi-line, etc.
Changed files:
    mwm-xsession.desktop -> 1.2

--- a/mwm-xsession.desktop
+++ b/mwm-xsession.desktop
@@ -8,3 +8,4 @@ Comment=The Motif Window Manager
 Comment[nl]=De Motif Window Manager
 Comment[sv]=Motifs fönsterhanterare
 X-AltNames=lesstif;motif;fvwmmwm
+# vi: encoding=utf-8
